# robot-plan-runner

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  action.yml  bionic.dockerfile  focal.dockerfile  jammy.dockerfile
.github/actions/bionic/: action.yml
.github/actions/focal/: action.yml
.github/actions/jammy/: action.yml
.github/workflows/: ci.yaml  ci.yml
config/: CMakeLists.txt  default.yaml  seed.yaml
lcmtypes/: .gitignore  CMakeLists.txt  install_lcm_types_here.sh  lcmt_plan_status.lcm  lcmt_plan_status_constants.lcm  lcmt_test.lcm
scripts/: build_and_run_tests.sh  build_test.sh  install_cppzmq.sh  install_dependencies.sh
src/: CMakeLists.txt  bimanual_iiwa_plan_manager.cc  bimanual_iiwa_plan_manager.h  iiwa_plan_manager.cc  iiwa_plan_manager.h  import_all_test.py  run_bimanual_plan_manager.cc  run_plan_manager.cc  run_plan_manager_system.cc  run_zmq_example.cc  sandbox.cc  send_joint_space_plan.py
src/client/: robot_plan_runner_client.py
src/examples/: iiwa_plan_manager_zmq_client.py  joint_space_trajectory_lcm_client.py  joint_space_trajectory_plan_client.py  joint_space_trajectory_zmq_client.py  lcm_client_example.py  make_joint_space_trajectory_plan.py  make_task_space_trajectory_plan.py  plan_manager_zmq_client.py  run_chicken_head_fake_msg_publisher.py  run_chicken_head_plan.py  simple_test.py  task_space_trajectory_plan_client.py  test_lcm.py  zmq_client_example.py
src/lcmtypes/: lcmt_robot_plan.lcm  lcmt_robot_state.lcm
src/particles/: particle.h
src/plan_manager_system/: CMakeLists.txt  iiwa_plan_manager_hardware_interface.cc  iiwa_plan_manager_hardware_interface.h  iiwa_plan_manager_system.cc  iiwa_plan_manager_system.h
src/plan_runner/: CMakeLists.txt  iiwa_plan_manager.cc  iiwa_plan_manager.h  joint_space_plan.h  plan_base.h  plan_manager.cc  plan_manager.h  plan_manager_state.cc  plan_manager_state_machine.cc  plan_manager_state_machine.h  run_plan_manager.cc  run_zmq_example.cc  sandbox.cc  send_joint_space_plan.py  state_error.cc  state_error.h  state_idle.cc  state_idle.h  state_init.cc  state_init.h  state_running.cc  state_running.h
src/plan_runner/plan_manager_system/: iiwa_plan_manager_hardware_interface.cc  iiwa_plan_manager_hardware_interface.h  iiwa_plan_manager_system.cc  iiwa_plan_manager_system.h
src/plan_runner/plans/: CMakeLists.txt  iiwa_plan_factory.cc  iiwa_plan_factory.h  joint_space_plan.cc  joint_space_plan.h  plan_base.h  plan_factory_base.h
src/plan_runner/state_machine/: CMakeLists.txt  plan_manager_state_machine.cc  plan_manager_state_machine.h  state_error.cc  state_error.h  state_idle.cc  state_idle.h  state_init.cc  state_init.h  state_running.cc  state_running.h
src/plan_runner_client/: calc_plan_msg.py  zmq_client.py
src/plans/: CMakeLists.txt  admittance_trajectory_plan.cc  admittance_trajectory_plan.h  bimanual_iiwa_plan_factory.cc  bimanual_iiwa_plan_factory.h  chicken_head_plan.cc  chicken_head_plan.h  hybrid_trajectory_plan.cc  hybrid_trajectory_plan.h  iiwa_plan_factory.cc  iiwa_plan_factory.h  implicit_trajectory_plan.cc  implicit_trajectory_plan.h  joint_space_plan.cc  joint_space_plan.h  joint_space_trajectory_plan.cc  joint_space_trajectory_plan.h  pen_plan.cc  pen_plan.h  plan_base.cc  plan_base.h  plan_factory_base.cc  plan_factory_base.h  rigid_trajectory_plan.cc  rigid_trajectory_plan.h  screwdriver_plan.cc  screwdriver_plan.h  squeegee_plan.cc  squeegee_plan.h  task_space_trajectory_plan.cc  task_space_trajectory_plan.h
src/state_machine/: CMakeLists.txt  plan_manager_state_machine.cc  plan_manager_state_machine.h  state_error.cc  state_error.h  state_idle.cc  state_idle.h  state_init.cc  state_init.h  state_running.cc  state_running.h  states.cc  states.h
src/traj_opt/: CMakeLists.txt  plan_base.cc  plan_base.h
src/utils/: lcm_delay_analysis.py
